<resources>
    <string name="app_name">5G-MAGflix</string>
    <string name="logo_text_5gmag">5G-MAG</string>
    <string name="logo_text_flix">flix</string>
    <string name="headline">5G-MAG Reference Tools</string>
    <string name="label_M8_config">Configuration URL</string>
    <string name="label_M8_selection">Select M8 Input</string>
    <string name="label_stream_selection">Select a Stream</string>
    <string name="start_playback_button">Start Playback</string>
    <string name="m8_config_input">local APK config</string>
    <string name="load_m8_button">Load</string>
    <string name="representation_info">%1$s kbit/s - Rep ID: %2$s</string>
    <string name="version_text_field">Version: %s</string>
    <string name="action_license">License</string>
    <string name="action_about">About</string>
    <string name="action_attribution_notice">Attribution Notice</string>
    <string name="contact">Contact</string>
    <string name="authors">Authors</string>
    <string name="project">Project</string>
    <string name="description">Description</string>
    <string name="description_text"><![CDATA[<p>The 5GMSd-Aware Application is an application in the UE, provided by the 5GMSd Application Provider, that contains the service logic of the 5GMSd application service, and interacts with other 5GMSd Client and Network functions via the interfaces and APIs defined in the 5GMSd architecture.
    </p><p>The 5GMSd-Aware Application controls the Media Session Handler via a UE-internal API defined at reference point M6d. This reference point could, for example, be realized as a JavaScript API in a web browser or via Inter Process Communication (IPC) for native Android applications. The 5GMSd-Aware Application controls the Media Player via a UE-internal API defined at reference point M7.</p>]]></string>
    <string name="github_label">Github</string>
    <string name="github_url">https://github.com/5G-MAG/rt-5gms-application</string>
    <string name="twitter_label">Twitter</string>
    <string name="twitter_url">https://twitter.com/5GMAGnews</string>
    <string name="linked_in_label">Linkedin</string>
    <string name="linked_in_url">https://www.linkedin.com/company/5g-mag/?miniCompanyUrn=urn%3Ali%3Afs_miniCompany%3A29303180</string>
    <string name="slack_label">Slack</string>
    <string name="slack_url">https://join.slack.com/t/5g-mag/shared_invite/zt-trtvsmw5-yYgcRidDgIS7x_u48sTuQA</string>
    <string name="website_label">Website</string>
    <string name="website_url">https://www.5g-mag.com/</string>
    <string name="authors_text">https://github.com/5G-MAG/rt-5gms-application/graphs/contributors</string>
    <string name="settings_title">Settings</string>
    <string name="settings_config_heading">Configuration Source</string>
    <string name="settings_config_description">Enter the URL of a remote app_config.json file to load sources from a server. Leave empty to use the built-in local configuration.</string>
    <string name="settings_config_hint">https://example.com/app_config.json</string>
    <string name="settings_m8_heading">Content Source</string>
    <string name="settings_m8_description">Select which content source to display. The available sources are loaded from the configuration above.</string>
    <string name="settings_reset_button">Reset</string>
    <string name="settings_loading">Loading configuration\u2026</string>
</resources>